--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       background:rgba(0,0,0,.25); border:1px solid rgba(255,255,255,.15);
       padding:8px 12px; border-radius:12px; backdrop-filter: blur(6px);}
   .btn{appearance:none; border:0; padding:.6rem 1rem; border-radius:10px; cursor:pointer;
-       font-weight:700; background:#00c46a; color:#002015; box-shadow:0 8px 16px rgba(0,196,106,.28)}
+       font-weight:700; background:#ffffff; color:#000000; box-shadow:0 8px 16px rgba(70, 76, 116, 0.595)}
 </style>
 </head>
 <body>
