--- a/index.html
+++ b/index.html
@@ -88,47 +88,56 @@
   const tctx = tmp.getContext('2d');
   tmp.width = W; tmp.height = H;
 
-  const margin = 32 * devicePixelRatio;       
-  const maxWidth = W - margin * 2;            
-  const maxFont = Math.min(W * 0.20, H * 0.24);
-  const minFont = Math.max(16 * devicePixelRatio, Math.min(W, H) * 0.10);
-
+  // ---- ajustes y helpers ----
+  const marginX = 32 * devicePixelRatio;            // margen lateral
+  const maxWidth = W - marginX * 2;                 // ancho útil
+  const marginY = 28 * devicePixelRatio;            // margen vertical
   const family = 'system-ui, Segoe UI, Arial';
+
+  // soportar salto de línea con '\n'
+  const lines = ('' + text).split('\n').slice(0,2); // usamos máx. 2 líneas
+  const isTwoLines = lines.length === 2;
+
+  // límites de fuente
+  const maxFont = Math.min(W * 0.26, H * 0.30);     // grande pero razonable
+  const minFont = 14 * devicePixelRatio;
 
   const measure = (str, px) => {
     tctx.font = `650 ${px}px ${family}`;
     return tctx.measureText(str).width;
   };
-  let fontSize = maxFont;
-  while (fontSize > minFont && measure(text, fontSize) > maxWidth) {
-    fontSize -= 2;
-  }
 
+  // hallamos el mayor fontSize que cabe en ancho (y alto si 2 líneas)
+  let fontSize = maxFont;
+  const lineGapFactor = 0.28; // separación relativa entre líneas
+  const fits = (px) => {
+    const wOK = Math.max(...lines.map(l => measure(l, px))) <= maxWidth;
+    if (!isTwoLines) return wOK;
+    const lineGap = Math.max(10*devicePixelRatio, px * lineGapFactor);
+    const totalHeight = px*2 + lineGap;
+    const hOK = totalHeight <= (H - marginY*2);
+    return wOK && hOK;
+  };
+  while (fontSize > minFont && !fits(fontSize)) fontSize -= 2;
+
+  // pintar texto en el canvas temporal
   tctx.clearRect(0,0,W,H);
   tctx.fillStyle = '#fff';
   tctx.textAlign = 'center';
   tctx.textBaseline = 'middle';
 
-  const centerY = H/2 - 26*devicePixelRatio;
-
-  if (measure(text, fontSize) <= maxWidth) {
+  if (!isTwoLines){
     tctx.font = `650 ${fontSize}px ${family}`;
-    tctx.fillText(text, W/2, centerY);
+    tctx.fillText(lines[0], W/2, H/2 - 26*devicePixelRatio);
   } else {
-    const parts = text.split(' ');
-    let line1 = parts[0];
-    let line2 = parts.slice(1).join(' ') || '';
-    fontSize = Math.min(maxFont, fontSize + 6);
-    while (fontSize > minFont &&
-           (Math.max(measure(line1, fontSize), measure(line2, fontSize)) > maxWidth)) {
-      fontSize -= 2;
-    }
+    const lineGap = Math.max(10*devicePixelRatio, fontSize * lineGapFactor);
+    const centerY = H/2 - 26*devicePixelRatio;
     tctx.font = `650 ${fontSize}px ${family}`;
-    const lineGap = Math.max(10*devicePixelRatio, fontSize * 0.25);
-    tctx.fillText(line1, W/2, centerY - (fontSize/2 + lineGap/2));
-    tctx.fillText(line2, W/2, centerY + (fontSize/2 + lineGap/2));
+    tctx.fillText(lines[0], W/2, centerY - (fontSize/2 + lineGap/2));
+    tctx.fillText(lines[1], W/2, centerY + (fontSize/2 + lineGap/2));
   }
 
+  // muestreo de puntos (igual que antes)
   const img = tctx.getImageData(0,0,W,H).data;
   const pts = [];
   const step = Math.max(10, Math.round(8*devicePixelRatio));
@@ -142,6 +151,7 @@
   pts.sort((a,b)=> a.x===b.x ? a.y-b.y : a.x-b.x);
   targetsText = resample(pts, Math.min(1000, pts.length));
 }
+
 
 
   function buildHeartTargets(){
@@ -304,15 +314,19 @@
     update(dt); draw(); requestAnimationFrame(loop);
   }
 
-  function reset(){
+function reset(){
   phase = 0; phaseTime = 0;
   showMsg = false; msgAlpha = 0;
+
   const isPortrait = H > W;
+  // En vertical: dos líneas y GRANDE. En horizontal: una línea.
   const title = isPortrait ? "Feliz\ncumple" : "Feliz cumple";
-  buildTextTargets(title.replace('\n',' '));
+
+  buildTextTargets(title);
   buildHeartTargets();
   seedText(targetsText);
 }
+
 
 
   reset(); requestAnimationFrame(loop);
